@@ -1,0 +1,30 @@
+## Title: LibEventHandler
+## Version: 1.2
+## Author: Justinon
+## IsLibrary: true
+## APIVersion: 100029
+## AddOnVersion: 1200
+
+LibEventHandler.lua
+
+; DISCLOSURE:
+; This Add-on is not created by, affiliated with or sponsored by ZeniMax
+; Media Inc. or its affiliates. The Elder Scrolls® and related logos are
+; registered trademarks or trademarks of ZeniMax Media Inc. in the United
+; States and/or other countries. All rights reserved.
+; You can read the full terms at https://account.elderscrollsonline.com/add-on-terms
+
+; AUTHOR NOTE:
+; Thank you for downloading LibEventHandler!
+;
+; The main purpose of this library is to allow for a more versatile event handler than what ZOS provides 
+; through their EVENT_MANAGER. LibEventHandler expands the limitation of an event being incarcerated with 
+; only one function, to now being able to be linked to as many different functions as needed. In addition, 
+; it allows for the firing and registering of local events that you create within your addon. Together, 
+; these features enable this powerful tool to allow the developer to not only be more flexible with event 
+; managing, but also to be more clean, concise, and acyclical with code.
+; 
+; Zenimax's EVENT_MANAGER will still need to be used should you require registering any functions for update,
+; simply because I found theirs to be sufficient and did not need any more versatility.
+; 
+; Again, thanks a bunch! Have fun programming! :)
